Revert "Linked Data export (#560)"
This reverts commit 0515e4204ee9c5ccfcf7f98f5b36c372c54888fa.